fix whitespace and header spacing

--- a/src/css/report.styl
+++ b/src/css/report.styl
@@ -10,13 +10,16 @@ body
 hr
     border-top 1px solid #005e7a
 #report__select
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 180px;
+    display flex
+    flex-direction column
+    justify-content center
+    align-items center
+    height 200px
+    margin-bottom 20px
     h1
       margin 0
+    h3
+      margin-top 10px
 .map__container
     display flex
     justify-content center
@@ -35,8 +38,9 @@ hr
         position absolute
 #report__container
     background #f0f0f0
-    display: flex;
-    flex-direction: column;
+    display flex
+    flex-direction column
+    height 100%
 #report__data
     height 100%
     flex-wrap wrap
